ai-rag-on-nkp-with-kotaemon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kotaemon
  labels:
    app: kotaemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kotaemon
  template:
    metadata:
      labels:
        app: kotaemon
    spec:
      containers:
        - name: kotaemon-lite
          image: ghcr.io/cinnamon/kotaemon:main-lite
          ports:
            - containerPort: 7860
