ai-rag-on-nkp-with-kotaemon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kotaemon
spec:
  selector:
    app: kotaemon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7860
  type: LoadBalancer
